--- a/src/components/blogcomponents/blogbanner/blogbanner.css
+++ b/src/components/blogcomponents/blogbanner/blogbanner.css
@@ -12,3 +12,25 @@
   padding-top: 8rem;
   padding-right: 3rem;
 }
+@media screen and (min-width: 1240px) and (max-width: 1320px) {
+  .container {
+    width: var(--container-width-lg);
+    margin: 0 auto;
+    max-width: 1320px;
+  }
+}
+@media screen and (min-width: 920px) and (max-width: 1240px) {
+  .container {
+    width: var(--container-width-lg);
+    margin: 0 auto;
+    max-width: 1240px;
+  }
+}
+
+@media screen and (min-width: 580px) and (max-width: 920px) {
+  .container {
+    width: var(--container-width-md);
+    margin: 0 auto;
+    max-width: 920px;
+  }
+}
