--- a/src/components/wtable/wtable.css
+++ b/src/components/wtable/wtable.css
@@ -28,3 +28,63 @@
   font-weight: 200;
   color: rgb(125, 121, 121);
 }
+@media screen and (min-width: 1240px) and (max-width: 1320px) {
+  .container {
+    width: var(--container-width-lg);
+    margin: 0 auto;
+    max-width: 1320px;
+  }
+}
+@media screen and (min-width: 920px) and (max-width: 1240px) {
+  .container {
+    width: var(--container-width-lg);
+    margin: 0 auto;
+    max-width: 1240px;
+  }
+}
+
+@media screen and (min-width: 580px) and (max-width: 920px) {
+  .container {
+    width: var(--container-width-md);
+    margin: 0 auto;
+    max-width: 920px;
+  }
+
+  .first-tab h4 {
+    margin-right: 5rem;
+  }
+
+  .header-wishlist h2 {
+    margin-left: 3rem;
+  }
+}
+
+@media screen and (min-width: 360px) and (max-width: 580px) {
+  .container {
+    width: var(--container-width-sm);
+    margin: 0 auto;
+    max-width: 580px;
+  }
+
+  .banner {
+    height: 15rem;
+  }
+
+  .banner h1 {
+    padding-top: 6rem;
+  }
+
+  .header-wishlist h2 {
+    font-size: 1.5rem;
+    margin-left: 1rem;
+  }
+
+  .first-tab h4 {
+    margin-right: 1rem;
+    font-size: 1rem;
+  }
+
+  .sec-tab h4 {
+    font-size: 1.2rem;
+  }
+}
