--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
   list-style: none;
   box-sizing: border-box;
 }
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,500&display=swap");
+
 :root {
   --background-main: #faeefd;
   --product-card: #ebe5f4;
@@ -19,7 +21,7 @@
   --color-white: #fff;
   --nav-color: #e5caf7;
 
-  --container-width-lg: 85%;
+  --container-width-lg: 100%;
   --container-width-md: 90%;
   --container-width-sm: 96%;
 }
@@ -28,10 +30,11 @@ body {
   font-family: "Oswald", sans-serif !important;
   line-height: 1.7;
   color: var(--color-black);
+  background: var(--background-main) !important;
 }
-.body-color {
-  background: var(--background-main);
-}
+/* .body-color {
+  background: var(--background-main) !important;
+} */
 .container {
   width: var(--container-width-lg);
   margin: 0 auto;
@@ -45,6 +48,10 @@ section {
 section.nav-section {
   padding: 0rem !important;
 }
+/* section h2 {
+  text-align: center;
+  margin-bottom: 4rem;
+} */
 
 h1 {
   font-size: 2.4rem;
@@ -63,8 +70,16 @@ h4 {
   font-size: 1rem;
 }
 
-img {
-  width: 100%;
-  height: 100%;
-  display: block;
+/* a {
+  color: var(--color-white);
+} */
+
+.btn {
+  display: inline-block;
+  /* background: var(--color-white); */
+  color: var(--color-black);
+  padding: 1rem 2rem;
+  border: 1px solid transparent;
+  font-weight: 500;
+  transition: var(--transition);
 }
