--- a/src/components/contactcomponents/contact.css
+++ b/src/components/contactcomponents/contact.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   border: 0;
@@ -46,7 +46,7 @@ section {
     text-align: center;
     margin-bottom: 4rem;
   } */
-
+/* 
 h1,
 h2,
 h3,
@@ -70,7 +70,7 @@ h4 {
 .second-text {
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
-}
+} */
 
 .contact {
   margin-top: 6.5rem;
