--- a/src/components/contactcomponents/contact.css
+++ b/src/components/contactcomponents/contact.css
@@ -1,77 +1,3 @@
-/* * {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
-}
-:root {
-  --background-main: #faeefd;
-  --product-card: #ebe5f4;
-  --star-fill: #f57c0b;
-  --favoriate-fill: #fa2b04;
-  --trasition: all 0.3s ease-in-out;
-  --card-fill: #088178;
-  --card-background: #ebe5f4;
-  --color-black: #000;
-  --color-white: #fff;
-  --nav-color: #e5caf7;
-
-  --container-width-lg: 85%;
-  --container-width-md: 90%;
-  --container-width-sm: 96%;
-}
-
-body {
-  font-family: "Oswald", sans-serif;
-  line-height: 1.7;
-  color: var(--color-black);
-}
-.body-color {
-  background: var(--background-main);
-}
-.container {
-  width: var(--container-width-lg);
-  margin: 0 auto;
-}
-.capital {
-  text-transform: uppercase;
-}
-section {
-  padding: 4rem 0;
-}
-/* section h2 {
-    text-align: center;
-    margin-bottom: 4rem;
-  } */
-/* 
-h1,
-h2,
-h3,
-h4,
-h5 {
-  line-height: 1.2;
-}
-
-h1 {
-  font-size: 2.4rem;
-}
-h2 {
-  font-size: 2rem;
-}
-h3 {
-  font-size: 1.6rem;
-}
-h4 {
-  font-size: 1.3rem;
-}
-.second-text {
-  font-family: "Open Sans", sans-serif;
-  font-size: 1rem;
-} */
-
 .contact {
   margin-top: 6.5rem;
   background-image: url(../../../public/images/contect.jpg);
@@ -117,7 +43,7 @@ h4 {
 #contact-detail .section-p2 {
   padding: 30px;
   font-size: 2rem;
-  padding: 80px;
+  padding: 0px;
 }
 
 #contact-detail .section-p2:hover {
@@ -266,8 +192,11 @@ h4 {
     height: 10rem;
     padding-left: 150px;
     padding-right: 10px;
+    padding-top: 15px;
   }
-
+  .contact h1 {
+    margin-top: 0rem;
+  }
   #contact-detail {
     display: flex;
     flex-direction: column;
@@ -280,7 +209,7 @@ h4 {
   }
   #contact-detail .section-p2 {
     font-size: 2rem;
-    padding: 60px;
+    padding: 0 60px;
   }
 
   #form-details {
@@ -314,15 +243,19 @@ h4 {
   #form-details form input,
   #form-details form textarea {
     width: 100%;
-    padding: 12px 80px;
+    padding: 12px 8px;
     margin-bottom: 20px;
   }
 
   #form-details .map {
     width: 100%;
     margin-top: 2rem;
+    text-align: center;
   }
   #form-details form button {
     margin-left: 2px;
+  }
+  .contectform {
+    padding: 0 1.5rem;
   }
 }
