--- a/src/components/bestsellercomponents/bestseller.css
+++ b/src/components/bestsellercomponents/bestseller.css
@@ -1,60 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Carter+One&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yesteryear&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
-}
-:root {
-  --background-main: #faeefd;
-  --product-card: #ebe5f4;
-  --star-fill: #f57c0b;
-  --favoriate-fill: #fa2b04;
-  --trasition: all 0.3s ease-in-out;
-  --card-fill: #088178;
-  --card-background: #ebe5f4;
-  --color-black: #000;
-  --color-white: #fff;
-
-  --container-width-lg: 85%;
-  --container-width-md: 90%;
-  --container-width-sm: 94%;
-}
-
-body {
-  font-family: "Oswald", sans-serif;
-  line-height: 1.7;
-  color: var(--color-black);
-  background: var(--background-main);
-}
-h1,
-h2,
-h3,
-h4,
-h5 {
-  line-height: 1.2;
-}
-
-h1 {
-  font-size: 2.4rem;
-}
-h2 {
-  font-size: 2rem;
-}
-h3 {
-  font-size: 1.6rem;
-}
-h4 {
-  font-size: 1.3rem;
-}
-.container {
-  width: var(--container-width-lg);
-  margin: 0 auto;
-}
 .best {
   display: flex;
   flex-wrap: wrap;
@@ -68,7 +11,6 @@ h4 {
 .img1 img {
   width: 100%;
   height: 30rem;
-  display: block;
 }
 .best-detail {
   width: 60%;
@@ -135,6 +77,24 @@ h4 {
     margin: 0 auto;
     max-width: 920px;
   }
+  .best {
+    display: block;
+  }
+  .best-detail img {
+    width: 100%;
+  }
+  .best-detail {
+    width: 100%;
+    padding-left: 10rem;
+    padding-top: 1rem;
+  }
+  .img1 {
+    width: 100%;
+  }
+  .img1 img {
+    width: 100%;
+    height: 30rem;
+  }
 }
 
 @media screen and (min-width: 360px) and (max-width: 580px) {
@@ -165,5 +125,13 @@ h4 {
     padding-left: 21%;
     padding-top: 0.5rem;
     padding-bottom: 1rem;
+  }
+  .best-detail img {
+    margin-left: -4rem;
+  }
+  .bss {
+    text-transform: uppercase;
+    margin-top: 0rem;
+    margin-left: -4rem;
   }
 }
