--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,11 @@
   --container-width-md: 90%;
   --container-width-sm: 96%;
 }
-
+img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
 body {
   font-family: "Oswald", sans-serif !important;
   line-height: 1.7;
@@ -70,9 +74,10 @@ h4 {
   font-size: 1rem;
 }
 
-/* a {
-  color: var(--color-white);
-} */
+a {
+  text-decoration: none;
+  color: black;
+}
 
 .btn {
   display: inline-block;
