--- a/src/components/head/head.css
+++ b/src/components/head/head.css
@@ -1,3 +1,19 @@
+a {
+  text-decoration: none;
+  color: black;
+  margin-top: 1.7rem;
+}
+
+@keyframes myani {
+  from {
+    transform: rotate(8deg);
+  }
+
+  to {
+    transform: rotate(-8deg);
+  }
+}
+
 .link {
   display: flex;
   align-items: center;
