--- a/src/components/single/detailproduct/detail.css
+++ b/src/components/single/detailproduct/detail.css
@@ -2,7 +2,7 @@
   max-width: 1200px;
   width: 100%;
   margin: 100px auto;
-  box-shadow: 0 0 5px #ccc;
+  box-shadow: 12px 14px 12px 0px rgb(126 71 155);
 }
 .details {
   display: flex;
