--- a/src/components/searchbox/search.css
+++ b/src/components/searchbox/search.css
@@ -14,9 +14,9 @@
   font-size: 1.2rem;
 }
 .logo1s {
-  width: 30%;
+  width: 40%;
   margin-left: 5rem;
-  margin-top: -1.5rem;
+  margin-top: -2rem;
   animation: myani 2s infinite linear alternate;
 }
 @keyframes myani {
@@ -26,5 +26,32 @@
 
   to {
     transform: rotate(-8deg);
+  }
+}
+@media screen and (min-width: 360px) and (max-width: 580px) {
+  .logo1s {
+    width: 100%;
+    margin-left: 3rem;
+  }
+  #searchInput {
+    margin-left: 5rem;
+  }
+}
+@media screen and (min-width: 580px) and (max-width: 920px) {
+  .logo1s {
+    width: 70%;
+    margin-top: -1.8rem;
+  }
+  #searchInput {
+    margin-left: 7rem;
+  }
+}
+@media screen and (min-width: 920px) and (max-width: 1240px) {
+  .logo1s {
+    width: 45%;
+    margin-top: -1.9rem;
+  }
+  #searchInput {
+    margin-left: 8rem;
   }
 }
