--- a/src/components/searchbox/search.css
+++ b/src/components/searchbox/search.css
@@ -28,3 +28,30 @@
     transform: rotate(-8deg);
   }
 }
+@media screen and (min-width: 360px) and (max-width: 580px) {
+  .logo1s {
+    width: 100%;
+    margin-left: 3rem;
+  }
+  #searchInput {
+    margin-left: 5rem;
+  }
+}
+@media screen and (min-width: 580px) and (max-width: 920px) {
+  .logo1s {
+    width: 70%;
+    margin-top: -1.8rem;
+  }
+  #searchInput {
+    margin-left: 7rem;
+  }
+}
+@media screen and (min-width: 920px) and (max-width: 1240px) {
+  .logo1s {
+    width: 45%;
+    margin-top: -1.9rem;
+  }
+  #searchInput {
+    margin-left: 8rem;
+  }
+}
