--- a/src/components/searchbox/search.css
+++ b/src/components/searchbox/search.css
@@ -1,23 +1,31 @@
 .searchcontainer {
   display: grid;
   height: 6.5rem;
-  grid-template-columns: 20% 80%;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: var(--nav-color);
+  margin-top: 6.5rem;
+  align-items: center;
 }
 #searchInput {
-  width: 70%;
+  width: 40%;
   height: 3rem;
-  padding-left: 1rem;
+  padding: 1rem 3rem;
   margin-top: 0rem;
   font-size: 1.2rem;
+  border: 1px solid #000;
+  border-radius: 10px;
+  margin-left: 25%;
 }
-.logo1s {
-  width: 30%;
-  margin-left: 5rem;
-  margin-top: -1.5rem;
-  animation: myani 2s infinite linear alternate;
+
+.btnicon {
+  padding: 0.5rem;
+  width: 7%;
+  font-size: 25px;
+  background-color: transparent;
+  border-radius: 10px;
+  position: absolute;
+  margin-left: 23%;
+  margin-top: 5px;
 }
 @keyframes myani {
   from {
@@ -34,7 +42,11 @@
     margin-left: 3rem;
   }
   #searchInput {
-    margin-left: 5rem;
+    width: 60%;
+    margin-left: 28%;
+  }
+  .btnicon {
+    margin-left: 27%;
   }
 }
 @media screen and (min-width: 580px) and (max-width: 920px) {
@@ -43,7 +55,10 @@
     margin-top: -1.8rem;
   }
   #searchInput {
-    margin-left: 7rem;
+    margin-left: 30%;
+  }
+  .btnicon {
+    margin-left: 29%;
   }
 }
 @media screen and (min-width: 920px) and (max-width: 1240px) {
@@ -52,6 +67,9 @@
     margin-top: -1.9rem;
   }
   #searchInput {
-    margin-left: 8rem;
+    margin-left: 20%;
+  }
+  .btnicon {
+    margin-left: 19%;
   }
 }
